Fix: nav item z-index 높여 사진에 가리지 않게 함

--- a/css/header.css
+++ b/css/header.css
@@ -41,7 +41,8 @@ nav {
     list-style: none;
     margin-top: 10px;
     padding: 1rem;
-    z-index: 1;
+    z-index: 100;
+
     
 }
 
